fixing projects image width on mobile

--- a/src/components/ProjectComponent/index.css
+++ b/src/components/ProjectComponent/index.css
@@ -75,8 +75,8 @@
     height: 30px;
 }
 
-/*Mobile*/
-@media (max-width: 400px){
+/*Tablet*/
+@media (min-width: 650px) and (max-width: 1000px){
     .project{
         flex-direction: column;
         height: auto;
@@ -84,7 +84,7 @@
     }
     .project-image{
         width: 100%;
-        height: auto;
+        max-height: 50vh;
     }
     .project-description{
         width: 100%;
@@ -94,16 +94,17 @@
     }
 }
 
-/*Tablet*/
-@media (min-width: 400px) and (max-width: 1000px){
+/*Mobile*/
+@media (max-width: 650px){
     .project{
         flex-direction: column;
         height: auto;
         gap:30px
     }
     .project-image{
-        width: 100%;
-        max-height: 50vh;
+        width: 95%;
+        height: auto;
+        margin-left: -10px;
     }
     .project-description{
         width: 100%;
